# forked

./: .env.example  .gitignore  LICENSE  README.md  STATUS.md  pyproject.toml
backend/: config.py  synth_client.py
backend/analysis/: __init__.py  anomaly_detector.py  cross_asset.py  distribution.py  edge_tracker.py  position_risk.py  probability.py  runner.py  synth_index.py
backend/api/: run.py  server.py
backend/collectors/: __main__.py  alphalog.py  runner.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  ProbabilityCone3D.tsx  api.ts  types.ts
legacy/: __main__.py  cross_asset.py  edge_detector.py  runner.py  trends.py
scripts/: accuracy_report.py  verify_api.py  verify_position_risk.py  verify_probability.py  verify_server.py
